--- a/css/section1.css
+++ b/css/section1.css
@@ -98,8 +98,75 @@
     top: 10px;
     left: 10px;
     width: 100%;
-    height: 150%;
+    height: 125%;
     z-index: -1;
     background-repeat: no-repeat;
     background-size: 125vh;
+}
+
+@media screen and (max-width: 768px) {
+
+    #maindiv{
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        width: 100vw;
+        height: 120vh;
+        position: relative;
+    }
+    #maindiv::after{
+        display: none;
+    }
+
+    #maincontent{
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+    }
+    #leftside1{
+        width: 100%;
+        height: 100%;
+        position: relative;
+        top: 60px;
+    }
+    #leftside1 h1{
+        font-size: 2rem;
+        text-align: justify;
+    }
+
+    #leftside1 p{
+        font-size: 0.8rem;
+        text-align: justify;
+    }
+
+    #buttons1{
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        width: 100%;
+        padding: 20px;
+        background-color: transparent;
+        box-sizing: border-box;
+        gap: 20px;
+    }
+    
+    #rightside1{
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        width: 100%;
+        height: 100%;
+        background-color: transparent;
+        box-sizing: border-box;
+        margin-top: 100px;
+    }
+    #rightside1 img{
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+        object-position: center;
+        
+    }
+    
 }
