--- a/css/section2.css
+++ b/css/section2.css
@@ -19,8 +19,13 @@
     flex-direction: column;
 }
 
+#section2content h1  
+{
+ font-size: 1.8rem;
+}
 #section2content h1 span {
     color: #5594F2;
+    
 }
 
 #section2content #line{
@@ -36,6 +41,42 @@
     width: 40%; 
     line-height: 1.8; 
     color: #888888; 
+}
+
+#para a {
+    color: #5594F2;
+}
+
+
+@media screen and (max-width: 768px) {
+    #section2content h1 {
+        font-size: 1.6rem;
+        padding: 50px;
+        text-align: center;
+        margin-bottom: 0px;
+    }
+    #para {
+        width: 70%;
+        font-size: 0.9rem;
+    }
+    #section2{
+        margin-top: 20px;
+        background-image: url(../Images/services-right-dec.png);
+        background-repeat: no-repeat;
+        background-size: 250%;
+        background-position-x: right;
+        background-position-y: top;
+        
+    }
+    #section2content {
+        width: 100%;
+        height: 100%;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        flex-direction: column;
+    }
+    
 }
 
 
