--- a/css/section1.css
+++ b/css/section1.css
@@ -53,6 +53,7 @@
 #leftside1 p{
     font-size: 1rem;
     font-family: "Roboto";
+    color: black;
     padding: 20px;
     margin: 0px;
     line-height: 2;
