--- a/css/section3.css
+++ b/css/section3.css
@@ -129,5 +129,17 @@
     
 }
 
+@media screen and (max-width: 768px) {
+    #section3content{
+        flex-direction: column;
+        align-items: center;
+    }
+    .card{
+        width: 90%;
+        margin: 10px 0;
+    }
+
+}
+
 
     
